Fix error on contact page overflow

--- a/css/contact.css
+++ b/css/contact.css
@@ -4,14 +4,7 @@ body {
 }
 
 .image-box {
-    /* position: fixed; */
-    width: 100%;
-    height: 100%;
-    /* overflow: hidden; */
-    /* The image used */
     background-image: url("../images/hero-bg.jpg");
-    /* Set a specific height */
-    /* height: 1000px; */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
