--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ html, body {
     padding-bottom: 20px;
 }
 .my-container {
-    height: 100%;
+    height: auto;
     width: 100%;
     position: relative;
     padding: 0;
